# Sokol3DGameEngine

./: .gitignore  CMakeLists.txt  Main.cpp  Shader.glsl  Shader.h  Shader2D.glsl  Shader2D.h  Shader3D.glsl  Shader3D.h  Shader3DLit.glsl  Shader3DLit.h  compile_shaders.bat  gitignore.txt  glsl Shader.glsl  sokol_debugtext.h
include/: Model.h
src/Audio/: AudioEngine.cpp  AudioEngine.h
src/Editor/: EditorUI.cpp  EditorUI.h  EntityPlacement.cpp  EntityPlacement.h  TransformGizmo.cpp  TransformGizmo.h  WireframeManager.cpp  WireframeManager.h
src/Game/: Camera.cpp  Camera.h  Components.h  ECS.cpp  ECS.h  Entity.h  GameState.h  Player.cpp  Player.h
src/Geometry/: Quad.cpp  Quad.h
src/Model/: ModelLoader.cpp  ModelLoader.h  ModelMetadata.h
src/Renderer/: Renderer.cpp  Renderer.h
src/UI/: UIManager.cpp  UIManager.h
src/Utilities/: RaycastHelper.cpp  RaycastHelper.h
